--- a/src/app/componentes/acerca-de/acerca-de.component.html
+++ b/src/app/componentes/acerca-de/acerca-de.component.html
@@ -10,8 +10,8 @@
   <div class="row row-cols-1 row-cols-md-2 g-3">
     <div class="col-md-5">
       <div class="card text-center bg-secondary">
-        <h1>{{about.name}}</h1>
-        <h3>{{about.position}}</h3>
+        <p id=""nombre>{{persona.nombre}}</p>
+        <h3>{{persona.apellido}}</h3>
         <div class="card-img-overlay">
           <button id="btn-edit-personal" href="#" class="btn btn-light" type="button">
             <i class="far fa-edit"></i>
@@ -22,7 +22,7 @@
     <div class="col-md-7">
       <div class="card text-left bg-secondary ">
         <h2>Informacion resumida</h2>
-        <h5>{{about.info}}<p>{{about.edad}}</p></h5>
+        <h5><p></p></h5>
       </div>
       <div class="card-img-overlay">
         <button id="btn-info-resumida-quitar" href="#" class="btn btn-light" type="button">
