--- a/src/app/componentes/banner/banner.component.html
+++ b/src/app/componentes/banner/banner.component.html
@@ -1,5 +1,5 @@
 <div class="card bg-dark text-white">
-    <img [src]="miBanner.backImage">
+    <img [src]="">
     <div class="card-img-overlay">
       <button href="#" class="btn btn-light" type="button"><i class="far fa-edit"></i>Edit Banner</button>
     </div>
