--- a/src/app/componentes/plantillas/estudios/estudios.component.html
+++ b/src/app/componentes/plantillas/estudios/estudios.component.html
@@ -11,20 +11,20 @@
       </div>
   </div>
   <ul class="item-list">
-    <li *ngFor="let educacion of educacionList">
+    <li *ngFor="let educacion of ">
       <div class="row g-0">
         <div class="col-md-3">
           <div class="logo-image-container">
-            <img [src]="educacion.img" class="img-fluid rounded-start">
+            <img [src]="" class="img-fluid rounded-start">
           </div>
         </div>
         <div class="col-md-8">
           <div class="list-info">
             <div>
-              <h5 class="card-title">{{educacion.title}}</h5>
-              <p>{{educacion.carrer}}</p>
-              <p>{{educacion.scholl}}</p>
-              <p><time>{{educacion.start}}</time> - <time>{{educacion.end}}</time> </p>
+              <h5 class="card-title"></h5>
+              <p></p>
+              <p></p>
+              <p><time></time> - <time></time> </p>
             </div>
           </div>
         </div>
