--- a/src/app/componentes/barra/barra.component.html
+++ b/src/app/componentes/barra/barra.component.html
@@ -1,9 +1,9 @@
 <div class="card mat-card" id="first-card">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid justify-content-start">
-        <a class="navbar-brand" [href]="programList.url">
-          <img [src]="programList.img"> </a>
-        <a class="nav-link disabled">{{programList.tittle}}</a>  
+        <a class="navbar-brand" [href]="">
+          <img [src]=""> </a>
+        <a class="nav-link disabled"></a>  
       </div>
       <div class="d-flex justify-content-end">
         <a class="nav-link active" aria-current="page" href="https://www.instagram.com/ivan.baranovsky/?hl=es-la">
