--- a/src/app/componentes/plantillas/hard-y-soft-skills/hard-y-soft-skills.component.html
+++ b/src/app/componentes/plantillas/hard-y-soft-skills/hard-y-soft-skills.component.html
@@ -10,17 +10,17 @@
         </div>
     </div>
     <ul class="item-list">
-        <li *ngFor="let progresos of progressList">
+        <li *ngFor="let progresos of ">
             <div class="row g-0">
                 <div class="col-md-2">
-                    <img [src]="progresos.img" class="img-fluid rounded-start">
+                    <img [src]="" class="img-fluid rounded-start">
                 </div>
                 <div class="col-md-2" id="nombre-progreso">
-                    <p><h2>{{progresos.name}}</h2>
+                    <p><h2></h2>
                 </div>
                 <div class="col-md-7">
                 <div class="progress">
-                    <p><h4>{{progresos.progress}}</h4>
+                    <p><h4></h4>
                     <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                 </div>
