--- a/src/app/componentes/plantillas/proyectos/proyectos.component.html
+++ b/src/app/componentes/plantillas/proyectos/proyectos.component.html
@@ -10,15 +10,15 @@
         </div>
     </div>
     <ul class="item-list">
-        <li *ngFor="let proyecto of proyectosList">
+        <li *ngFor="let proyecto of ">
             <div class="row g-0">
                 <div class="col-md-3">
-                    <img [src]="proyecto.img" class="img-fluid rounded-start" alt="...">
+                    <img [src]="" class="img-fluid rounded-start" alt="...">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
-                        <h5 class="card-title">{{proyecto.name}}</h5>
-                        <p class="card-text">{{proyecto.description}}</p>
+                        <h5 class="card-title"></h5>
+                        <p class="card-text"></p>
                     </div>
                 </div>
                 <div class="col-md-1">
@@ -30,7 +30,7 @@
                     </button>
                 </div>
                 <div class="btn-link">
-                    <a [href]="proyecto.url" class="btn btn-dark">Ver Pagina Web</a>
+                    <a [href]="" class="btn btn-dark">Ver Pagina Web</a>
                 </div>
             </div>
         </li>
