--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,1 @@
-<app-barra></app-barra>
-<app-banner></app-banner>
-<app-acerca-de></app-acerca-de>
-<app-agregar-quitar></app-agregar-quitar>
-<app-estudios></app-estudios>
-<app-hard-y-soft-skills></app-hard-y-soft-skills>
-<app-proyectos></app-proyectos>
+<router-outlet></router-outlet>
